# nfield

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  coverage.json  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: show-and-tell.yml
.github/ISSUE_TEMPLATE/: backend_request.yml  bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  docs.yml  oracle_lanes.yml  release.yml  security.yml  type-check.yml
benchmark/: README.md  __init__.py  _figstyle.py  budget.py  datasets.py  extractbench_domains.py  fieldcount.py  fintagging.py  head2head.py  models.py  pdf_router.py  reference.py  rejudge_extractbench.py  report.py  runner.py  runner2.py  runner3.py  runner4.py  runner_extractbench.py  score.py  score_extractbench.py
benchmark/adapters/: __init__.py  _base.py  _common.py  _errors.py  contextgem_adapter.py  instructor_adapter.py  langchain_adapter.py  langextract_adapter.py  langstruct_adapter.py  native_json_adapter.py  nfield_adapter.py  raw_prompt_adapter.py
benchmark/benchmarks/: __init__.py  fintagging.py  head2head.py  runner_extractbench.py
benchmark/datasets/: README.md
benchmark/datasets/closed_book/: build_fixtures.py
benchmark/datasets/fintagging/: finni_wide.jsonl
benchmark/figures/: __init__.py  charts.py  extractbench_domains.py  fieldcount.py  report.py
benchmark/results/groq-llama-3.3-70b-versatile_2026-06-10_07-14-15/: MANIFEST.json  summary.csv
benchmark/runners/: __init__.py  runner.py  runner2.py  runner3.py  runner4.py
benchmark/scoring/: __init__.py  rejudge_extractbench.py  score_extractbench.py
demo/: app.py  index.html  new_presets_30.json  presets.json
docs/: changelog.md  cli.md  configuration.md  errors.md  examples.md  getting-started.md  index.md  quickstart.md
docs/api/: nfield.md
docs/concepts/: pipeline.md  sfep.md
docs/explanation/: format-tax.md  routing-algorithm.md  ttf-algorithm.md  when-ttf-hurts.md
docs/migration/: oracle-v3.md
docs/reference/: backends.md  benchmark.md  cli.md  core.md  oracle.md  scorer.md  streaming.md  ttf.md
docs/stylesheets/: extra.css
docs/tutorials/: 01-basic-generation.md  02-routing.md  03-benchmarking.md  04-backends.md  05-streaming.md  06-langchain.md  07-observability.md  08-contributing.md  index.md
examples/: README.md  agent_tool_calling.py  async_batch.py  contract_extraction.py  customer_support.py  document_classification.py  fastapi_server.py  financial_analysis.py  invoice_extraction.py  medical_ner.py  quickstart.py  rag_extraction.py  requirements.txt  schema_dict_example.py  streaming_example.py
examples/notebooks/: 01_schema_injection.ipynb  02_wide_schema.ipynb  03_grounding_provenance.ipynb  04_agent_tool.ipynb
examples/scripts/: agent_tool.py  full_tour.py  grounding_provenance.py  invoice_extraction.py  quickstart.py  response_cache.py  schema_dict_example.py  wide_schema.py
paper/: draft_v0.md
rcocr/: pyproject.toml
rcocr/src/rcocr/: __init__.py  engine.py  protocol.py
rcocr/tests/: test_rcocr.py
results/: benchmark_results.csv
results/artifacts/: summary.json  table1_accuracy_by_backend.csv  table1_latex.tex  table2_failure_modes.csv
results/raw/: results_20260416T224805Z.jsonl  results_20260416T225008Z.jsonl  results_20260416T225112Z.jsonl
scripts/: bench_financial.py  gen_clinicaltrial_fixture.py  gen_factbook_fixture.py  groq_stage5_hardtest.py  inspect_wp_excerpts.py  live_test_groq.py  patch_backends_logit_bias.py  record_fixtures.py  run_new_approach.py  run_pipeline.py  trace_pipeline.py  train_oracle.py  wp_matrix.py
src/formatshield/: __init__.py  _engine.py  _retry.py  _version.py  caching.py  cli.py  config.py  core.py  exceptions.py  export.py  generator.py  hooks.py  io.py  prompting.py  types.py
src/formatshield/cli/: _app.py  (+1 more)
src/nfield/: __init__.py  _version.py  config.py  exceptions.py  export.py  io.py  types.py  viz.py
tests/: conftest.py
tests/benchmark/: test_adapters.py  test_budget.py  test_datasets.py  test_errors.py  test_fieldcount.py  test_fintagging.py  test_phase2_adversarial.py  test_reference.py  test_report.py  test_review_adversarial.py  test_runner.py  test_score.py
tests/e2e/: test_full_pipeline.py  test_schema_reasoning_integration.py
tests/fixtures/: .gitkeep  groq_responses.jsonl
tests/golden/: test_financial_10k_golden.py  test_financial_golden.py  test_invoice_golden.py  test_medical_golden.py
tests/integration/: test_aggressive_scale_live.py  test_clinicaltrial_full_pipeline_live.py  test_end_to_end.py  test_factbook_full_pipeline_live.py  test_factbook_multi_live.py  test_full_pipeline.py  test_groq_backend.py  test_groq_provider_live.py  test_large_documents_live.py  test_medical_crf_full_pipeline_live.py  test_real_10k_live.py  test_section3_live.py  test_section4_live.py  test_section5_live.py  test_war_and_peace_full_pipeline_live.py
tests/regression/: test_regression_loop1_backend_injection.py
tests/unit/: conftest.py  test_adversarial_section1.py  test_anthropic_backend.py  test_audit_log.py  test_autogen_integration.py  test_batch_processor.py  test_bedrock_backend.py  test_benchmark_harness.py  test_benchmark_tasks_coverage.py  test_caching.py  test_cli.py  test_code_extraction_task.py  test_complexity_scorer.py  test_complexity_scorer_coverage.py  test_complexity_scorer_properties.py  test_config.py  test_context.py  test_core.py  test_core_coverage.py  test_cross_backend.py  test_csv_exporter.py  test_day4_tasks.py  test_dryrun_backend.py  test_dsl.py  test_edge_cases.py  test_export.py  test_failure_detector.py  test_failure_detector_coverage.py  test_format_router.py  test_formats_latex.py  test_formats_markdown.py  test_formats_xml.py  test_gemini_backend.py  test_generator.py  test_gpqa_task.py  test_groq_backend.py  test_harness_judge.py  test_hooks.py  test_io.py  test_judge.py  (+44 more)
(+834 files in other folders)
