[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "formatshield"
dynamic = ["version"]
description = "N-field structured extraction from documents with LLMs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "nfield-labs", email = "contact@nfield-labs.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
groq = ["groq>=0.9"]
cli = ["typer>=0.12"]
export = ["pandas>=2.0"]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3",
    "coverage[toml]>=7",
    "ruff>=0.8",
    "mypy>=1.13",
    "hypothesis>=6",
    "pre-commit>=4",
]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.27"]
bench = [
    "instructor>=1.15.1",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
]

[project.scripts]
formatshield = "formatshield.cli._app:main"

[project.urls]
Homepage = "https://github.com/nfield-labs/formatshield"
Documentation = "https://formatshield.readthedocs.io"
Changelog = "https://github.com/nfield-labs/formatshield/blob/main/CHANGELOG.md"
Repository = "https://github.com/nfield-labs/formatshield"
"Bug Tracker" = "https://github.com/nfield-labs/formatshield/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/formatshield"]
include = ["src/formatshield/py.typed"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "N", "C4", "TCH", "PT", "PERF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S101", "B", "PT"]
"__init__.py" = ["F401"]
# Typer resolves command annotations at runtime via get_type_hints, so Path /
# Annotated must stay as real runtime imports — not moved to TYPE_CHECKING.
"src/formatshield/cli/_app.py" = ["TC003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Dataset provenance scripts fetch from external services and are run by hand,
# not type-checked with the library's strictness (they were untyped in scripts/).
exclude = ["benchmark/datasets/gen/"]

[[tool.mypy.overrides]]
module = ["groq.*"]
ignore_missing_imports = true

# matplotlib is an optional, plot-only dependency of the dev benchmark harness;
# it is imported lazily and never required to run the library or its tests.
[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# pandas is the optional [export] dependency, imported lazily inside export.py only.
[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

# Competitor libraries driven by the head-to-head benchmark (runner3); they ship no
# type stubs and are imported lazily inside the adapters, never by the library.
[[tool.mypy.overrides]]
module = ["dspy.*", "langstruct.*", "langextract.*", "contextgem.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--tb=short"]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source_pkgs = ["formatshield"]
parallel = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 80

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest-cov>=7.1.0",
]
