[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nfield"
dynamic = ["version"]
description = "N-field structured extraction from documents with LLMs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "nfield-labs", email = "contact@nfield-labs.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "json-repair>=0.61.0",
]

# Runtime features a user opts into; published to PyPI as `nfield[<name>]`.
[project.optional-dependencies]
groq = ["groq>=0.9"]
openai = ["openai>=1.0"]
google = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.40"]
# OpenAI-compatible presets: same SDK, different base URL and key variable.
openrouter = ["openai>=1.0"]
deepseek = ["openai>=1.0"]
together = ["openai>=1.0"]
fireworks = ["openai>=1.0"]
mistral = ["openai>=1.0"]
xai = ["openai>=1.0"]
perplexity = ["openai>=1.0"]
cerebras = ["openai>=1.0"]
ollama = ["openai>=1.0"]
cli = ["typer>=0.12"]
export = ["pandas>=2.0"]

[project.scripts]
nfield = "nfield.cli._app:main"

[project.urls]
Homepage = "https://github.com/nfield-labs/nfield"
Documentation = "https://github.com/nfield-labs/nfield/tree/main/docs"
Changelog = "https://github.com/nfield-labs/nfield/blob/main/CHANGELOG.md"
Repository = "https://github.com/nfield-labs/nfield"
"Bug Tracker" = "https://github.com/nfield-labs/nfield/issues"

# Development-only requirements (PEP 735); never published, never pulled by
# `pip install nfield`. Install with `uv sync` (dev) or `uv sync --group docs|bench`.
[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3",
    "pytest-cov>=7.1.0",
    "coverage[toml]>=7",
    "ruff>=0.8",
    "mypy>=1.13",
    "hypothesis>=6",
    "pre-commit>=4",
    "twine>=5",
]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.27"]
# The comparison harness in benchmark/ imports these; run it with `uv sync --group bench`.
bench = [
    "instructor>=1.15.1",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langextract",
    "langstruct; python_version >= '3.12'",
    "contextgem",
    "dspy",
    "pypdfium2",
    "pymupdf>=1.28",
    "rapidocr-onnxruntime>=1.4.4",
    "matplotlib>=3.8",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/nfield"]
include = ["src/nfield/py.typed"]

[tool.ruff]
line-length = 99
target-version = "py310"
# Vendored, cloned benchmark repos (e.g. ContextualAI/extract-bench) keep their own
# style; they are run, not maintained here, so they stay out of the lint gate.
extend-exclude = ["benchmark/external/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "N", "C4", "TCH", "PT", "PERF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S101", "B", "PT"]
"__init__.py" = ["F401"]
# Typer resolves command annotations at runtime via get_type_hints, so Path /
# Annotated must stay as real runtime imports - not moved to TYPE_CHECKING.
"src/nfield/cli/_app.py" = ["TC003"]
# This module's whole purpose is folding spacing accents, so it necessarily
# contains the ambiguous accent characters it repairs.
"benchmark/pdf_router.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Dataset generation scripts fetch from external services and are run by hand,
# not type-checked with the library's strictness.
exclude = ["benchmark/datasets/gen/", "benchmark/external/"]

[[tool.mypy.overrides]]
module = ["groq.*", "openai.*", "anthropic.*"]
ignore_missing_imports = true

# matplotlib is an optional, plot-only dependency of the dev benchmark harness;
# it is imported lazily and never required to run the library or its tests.
[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# pandas is the optional [export] dependency, imported lazily inside export.py only.
[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

# The benchmark adapters (bench dependency group) import these; they ship no type stubs
# and are imported lazily inside the benchmark, never by the library itself.
[[tool.mypy.overrides]]
module = ["dspy.*", "langstruct.*", "langextract.*", "contextgem.*", "pypdfium2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--tb=short"]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source_pkgs = ["nfield"]
parallel = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 80
