[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcocr"
version = "0.1.0"
description = "Reasoning-Compatible Output Constraint Recovery — the correct two-pass architecture for structured generation with reasoning models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "llm", "structured-output", "reasoning", "chain-of-thought",
    "json-schema", "two-pass", "rcocr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]

[project.urls]
Homepage = "https://github.com/formatshield/rcocr"
Repository = "https://github.com/formatshield/rcocr"
Issues = "https://github.com/formatshield/rcocr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rcocr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
